# plist-helper

./: .gitignore  .python-version  README.md  foo.plist  manual_testing.py  pyproject.toml  test.plist  test2.plist  test_update.plist
src/plist_helper/: __init__.py  __main__.py  _cli.py  _exceptions.py  _helpers.py  _plist.py  cli.py  helper.py  helpers.py  plist.py
tests/: test_helper.py
