[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Not currently used by Poetry
[project.scripts]
plistHelper = "plist_helper.__main__:main"

[tool.poetry]
name = "plist-helper"
version = "0.1.0"
description = "Sensible management of Apple plist files"
authors = ["Jason Lyle <jason.lyle88@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.scripts]
plistHelper = "plist_helper.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pylint = "^3.2.2"
bandit = "^1.7.8"
pytest = "^8.2.1"

