[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Not currently used by Poetry
[project]
name = "plist-helper"
version = "0.1.0"

# Not currently used by Poetry
[project.scripts]
plistHelper = "plist_helper.__main__:main"

[tool.poetry]
name = "plist-helper"
version = "0.1.0"
description = "Sensible management of Apple plist files"
authors = ["Jason Lyle <jason.lyle88@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.scripts]
plistHelper = "plist_helper.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
bandit = "^1.7.8"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "PL", "S", "B", "A", "SIM", "RUF", "C90", "I", "N", "D", "ANN", "COM", "ISC", "ICN", "T20", "Q", "RET", "RSE", "SLF", "TID", "TCH", "ARG", "TD"]
ignore = ["ANN101", "ANN102", "TD003"]